# streamline-ml-pipelines

mlflow-jenkins-gcp/: .gitignore  README.md  pyproject.toml
mlflow-jenkins-gcp/src/: exceptions.py  logger.py
mlflow-jenkins-gcp/tests/: test_logger.py
setup-jenkins-with-helm/: README.md
setup-jenkins-with-helm/master/: sc.yaml  values-minikube.yaml  values-public.yaml  values.yaml
setup-jenkins-with-helm/terraform/: .gitignore  .pre-commit-config.yaml
setup-jenkins-with-helm/terraform/bootstrap/: main.tf  route53.tf  terraform.tf
setup-jenkins-with-helm/terraform/jenkins/: adds-on.tf  certs.tf  eks.tf  iam.tf  locals.tf  main.tf  node.tf  policies.tf  variables.tf
setup-jenkins-with-helm/terraform/modules/eks/: attachments.tf
setup-jenkins-with-helm/terraform/modules/node/: attachment.tf
setup-jenkins-with-helm/terraform/vpc/: efs.tf  main.tf  securitygroup.tf  variables.tf  version.tf
